--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
-    "next": "14.2.16",
+    "next": "^14.2.24",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
