se actualiza la página de proyectos para incluir proyectos privados desde un archivo JSON y se mejora la gestión de proyectos públicos

--- a/app/data/projects.json
+++ b/app/data/projects.json
@@ -1,384 +1,16 @@
 [
     {
-        "id": "1",
-        "name": "GitHub Profile",
-        "description": "Perfil de GitHub.",
-        "coverImage": "/projects/JunnioRavelo.svg",
+        "id": "1000",
+        "name": "Asociación Manos Amor",
+        "description": "Desarrollo e implementación del sitio web de la Asociación Manos Amor, incluyendo diseño, despliegue, optimización para buscadores (SEO) e indexación en buscadores.",
+        "coverImage": "/projects/Asociación_Manos_Amor.webp",
         "technologies": [
-            "React",
-            "TypeScript",
-            "Tailwind CSS"
+            "wordpress",
+            "php"
         ],
         "links": {
-            "website": "https://github.com/JunniorRavelo",
-            "github": "https://github.com/JunniorRavelo/JunniorRavelo"
-        },
-        "date": "2023-01-01"
-    },
-    {
-        "id": "2",
-        "name": "Analizador de contraseñas",
-        "description": "Descripción breve del proyecto 2.",
-        "coverImage": "/projects/password-analyzer.svg",
-        "technologies": [
-            "Next.js",
-            "Prisma",
-            "PostgreSQL"
-        ],
-        "links": {
-            "github": "https://github.com/JunniorRavelo/password-analyzer"
-        },
-        "date": "2024-11-15"
-    },
-    {
-        "id": "3",
-        "name": "Proyecto 3",
-        "description": "Descripción breve del proyecto 3.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "React Native",
-            "Firebase",
-            "Redux"
-        ],
-        "links": {
-            "youtube": "https://youtube.com/watch?v=example3"
-        },
-        "date": "2025-01-03"
-    },
-    {
-        "id": "4",
-        "name": "Proyecto 4",
-        "description": "Descripción breve del proyecto 4.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Node.js",
-            "Express",
-            "MongoDB"
-        ],
-        "links": {
-            "website": "https://example4.com",
-            "github": "https://github.com/example/4"
-        },
-        "date": "2025-01-04"
-    },
-    {
-        "id": "5",
-        "name": "Proyecto 5",
-        "description": "Descripción breve del proyecto 5.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Vue.js",
-            "Pinia",
-            "Tailwind CSS"
-        ],
-        "links": {
-            "website": "https://example5.com"
-        },
-        "date": "2025-01-05"
-    },
-    {
-        "id": "6",
-        "name": "Proyecto 6",
-        "description": "Descripción breve del proyecto 6.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Angular",
-            "RxJS",
-            "NgRx"
-        ],
-        "links": {
-            "github": "https://github.com/example/6"
-        },
-        "date": "2025-01-06"
-    },
-    {
-        "id": "7",
-        "name": "Proyecto 7",
-        "description": "Descripción breve del proyecto 7.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Python",
-            "Django",
-            "PostgreSQL"
-        ],
-        "links": {
-            "website": "https://example7.com",
-            "github": "https://github.com/example/7"
+            "website": "https://asociacionmanosamor.org/"
         },
         "date": "2025-01-07"
-    },
-    {
-        "id": "8",
-        "name": "Proyecto 8",
-        "description": "Descripción breve del proyecto 8.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Go",
-            "Fiber",
-            "MySQL"
-        ],
-        "links": {
-            "website": "https://example8.com"
-        },
-        "date": "2025-01-08"
-    },
-    {
-        "id": "9",
-        "name": "Proyecto 9",
-        "description": "Descripción breve del proyecto 9.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "PHP",
-            "Laravel",
-            "MySQL"
-        ],
-        "links": {
-            "github": "https://github.com/example/9"
-        },
-        "date": "2025-01-09"
-    },
-    {
-        "id": "10",
-        "name": "Proyecto 10",
-        "description": "Descripción breve del proyecto 10.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Ruby",
-            "Rails",
-            "PostgreSQL"
-        ],
-        "links": {
-            "github": "https://github.com/example/10",
-            "youtube": "https://youtube.com/watch?v=example10"
-        },
-        "date": "2025-01-10"
-    },
-    {
-        "id": "11",
-        "name": "Proyecto 11",
-        "description": "Descripción breve del proyecto 11.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "React",
-            "Node.js",
-            "GraphQL"
-        ],
-        "links": {
-            "website": "https://example11.com"
-        },
-        "date": "2025-01-11"
-    },
-    {
-        "id": "12",
-        "name": "Proyecto 12",
-        "description": "Descripción breve del proyecto 12.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "React Native",
-            "Expo",
-            "SQLite"
-        ],
-        "links": {
-            "github": "https://github.com/example/12"
-        },
-        "date": "2025-01-12"
-    },
-    {
-        "id": "13",
-        "name": "Proyecto 13",
-        "description": "Descripción breve del proyecto 13.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Next.js",
-            "MongoDB",
-            "Tailwind CSS"
-        ],
-        "links": {
-            "youtube": "https://youtube.com/watch?v=example13"
-        },
-        "date": "2025-01-13"
-    },
-    {
-        "id": "14",
-        "name": "Proyecto 14",
-        "description": "Descripción breve del proyecto 14.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Angular",
-            "NestJS",
-            "MySQL"
-        ],
-        "links": {
-            "website": "https://example14.com",
-            "github": "https://github.com/example/14"
-        },
-        "date": "2025-01-14"
-    },
-    {
-        "id": "15",
-        "name": "Proyecto 15",
-        "description": "Descripción breve del proyecto 15.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Svelte",
-            "Node.js",
-            "PostgreSQL"
-        ],
-        "links": {
-            "website": "https://example15.com"
-        },
-        "date": "2025-01-15"
-    },
-    {
-        "id": "16",
-        "name": "Proyecto 16",
-        "description": "Descripción breve del proyecto 16.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Go",
-            "Gin",
-            "MongoDB"
-        ],
-        "links": {
-            "github": "https://github.com/example/16"
-        },
-        "date": "2025-01-16"
-    },
-    {
-        "id": "17",
-        "name": "Proyecto 17",
-        "description": "Descripción breve del proyecto 17.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Python",
-            "Flask",
-            "SQLite"
-        ],
-        "links": {
-            "website": "https://example17.com",
-            "youtube": "https://youtube.com/watch?v=example17"
-        },
-        "date": "2025-01-17"
-    },
-    {
-        "id": "18",
-        "name": "Proyecto 18",
-        "description": "Descripción breve del proyecto 18.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Vue.js",
-            "Node.js",
-            "GraphQL"
-        ],
-        "links": {
-            "github": "https://github.com/example/18"
-        },
-        "date": "2025-01-18"
-    },
-    {
-        "id": "19",
-        "name": "Proyecto 19",
-        "description": "Descripción breve del proyecto 19.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "React",
-            "AWS Lambda",
-            "DynamoDB"
-        ],
-        "links": {
-            "website": "https://example19.com"
-        },
-        "date": "2025-01-19"
-    },
-    {
-        "id": "20",
-        "name": "Proyecto 20",
-        "description": "Descripción breve del proyecto 20.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Next.js",
-            "tRPC",
-            "Prisma"
-        ],
-        "links": {
-            "github": "https://github.com/example/20"
-        },
-        "date": "2025-01-20"
-    },
-    {
-        "id": "21",
-        "name": "Proyecto 21",
-        "description": "Descripción breve del proyecto 21.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "React Native",
-            "Firebase",
-            "Tailwind CSS"
-        ],
-        "links": {
-            "youtube": "https://youtube.com/watch?v=example21"
-        },
-        "date": "2025-01-21"
-    },
-    {
-        "id": "22",
-        "name": "Proyecto 22",
-        "description": "Descripción breve del proyecto 22.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Angular",
-            "Node.js",
-            "Redis"
-        ],
-        "links": {
-            "website": "https://example22.com"
-        },
-        "date": "2025-01-22"
-    },
-    {
-        "id": "23",
-        "name": "Proyecto 23",
-        "description": "Descripción breve del proyecto 23.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "PHP",
-            "Laravel",
-            "MySQL"
-        ],
-        "links": {
-            "github": "https://github.com/example/23"
-        },
-        "date": "2025-01-23"
-    },
-    {
-        "id": "24",
-        "name": "Proyecto 24",
-        "description": "Descripción breve del proyecto 24.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Ruby",
-            "Rails",
-            "PostgreSQL"
-        ],
-        "links": {
-            "website": "https://example24.com",
-            "github": "https://github.com/example/24"
-        },
-        "date": "2025-01-24"
-    },
-    {
-        "id": "25",
-        "name": "Proyecto 25",
-        "description": "Descripción breve del proyecto 25.",
-        "coverImage": "/placeholder.svg",
-        "technologies": [
-            "Go",
-            "Echo",
-            "MySQL"
-        ],
-        "links": {
-            "youtube": "https://youtube.com/watch?v=example25"
-        },
-        "date": "2025-01-25"
     }
 ]
