--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-v5",
+  "name": "portfolio",
   "author": {
     "name": "Junnior Santiago Ravelo Velasco",
     "email": "JSantiagoRavelo@gmail.com",
@@ -49,5 +49,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "glob": "^10.5.0"
   }
 }
